Bug 570144 - After pressing Enter, editable DIVs in list items are duplicated; r=ehsan